# conda-rattler-solver

./: .authors.yml  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HOW_WE_USE_GITHUB.md  README.md  RELEASE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/template-files/templates/: pull_request_template_details.md
.github/workflows/: test-upstream.yaml  test-upstream.yml  tests.yml
conda_rattler_solver/: index.py  solver.py  utils.py
dev/: requirements.txt
news/: 101-include-installed-packages-in-solve  80-on-demand-release-process  82-fix-local-tests  84-infrastructure-dependabot  96-suggest-conda-self-update
recipe/: meta.yaml
tests/: _pytest_upstream.py  requirements.txt  test_channels.py  test_index.py  test_repoquery.py  test_solver.py  test_utils.py
tests/data/conda_build_recipes/jedi/: meta.yaml
